# xfce3

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.init  NEWS  README  README.UPGRADE-3.2.0  README.UPGRADE-3.5.0  README.md  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs  xfce-3.8.18.lsm  xfce.spec
backdrops/: BlackStripes.xpm  BlueStripes.xpm  Default.xpm  GreenStripes.xpm  Makefile.am  Makefile.in  PurpleStripes.xpm  WhiteStripes.xpm
dt/: Makefile.am  Makefile.in  Xinitrc.xfce.in  Xresources.xfce.in  Xsession.xfce.in
fonts/: Makefile.am  Makefile.in  fonts.dir
gdm/: 10XFce.in  Makefile.am  Makefile.in  XFce.in  Xclients.xfce.in
icons/: 3dpaint.xpm  ABC.xpm  AZ.xpm  AceKingCards.xpm  AntiVirus.xpm  ArtFolderEmpty.xpm  ArtFolderFull.xpm  BWDialogEdit.xpm  BWwidgets.xpm  BallotBox.xpm  Book.xpm  BulletHole.xpm  CDPlayer.xpm  CPUChip.xpm  Calculator.xpm  CheckMarkMonitor.xpm  ChiselChartSlide.xpm  Clock.xpm  ClosedPackageBox.xpm  ColoredCompactDisc.xpm  Connect.xpm  CrashCartoon.xpm  CylinderWrenchSpreadsheet.xpm  DeskGlobe.xpm  Director.xpm  Disk-Blue.xpm  DiskFloppy.xpm  DiskHammer.xpm  DiskHardDrive.xpm  DiskOptical.xpm  DisketteBoxEmpty.xpm  DisketteBoxFull.xpm  Document.xpm  Edit.xpm  Equation.xpm  EscherCube.xpm  EscherTriangle.xpm  FaxRecieved.xpm  FileAPP.xpm  FileManager.xpm  (+67 more)
libs/: ClientMsg.c  GetFont.c  Grab.c  Makefile.am  Makefile.in  Module.c  Parse.c  Picture.c  Strings.c  System.c  alpha_header.h  colorselect.c  colorselect.h  configure.h  constant.h  defaulticon.h  empty.h  envvar.c  fileselect.c  fileselect.h  fileutil.c  fileutil.h  fontselection.c  fontselection.h  gnome_protocol.c  gnome_protocol.h  lightdark.h  module.h  my_intl.h  my_scandir.c  my_scandir.h  my_string.c  my_string.h  my_tooltips.c  my_tooltips.h  mygtkclock.c  mygtkclock.h  safemalloc.c  sendinfo.c  sendinfo.h  (+12 more)
other/: COPYING.in  Makefile.am  Makefile.in  XFce3.logo  XFce3mice.logo  Xclients  fvwm2rc  fvwmrc  taskbarrc  xfbdrc.in  xfce3rc.bg.in  xfce3rc.cs.in  xfce3rc.de.in  xfce3rc.es  xfce3rc.es.in  xfce3rc.fr.in  xfce3rc.hu.in  xfce3rc.in  xfce3rc.ja.in  xfce3rc.ko.in  xfce3rc.nl.in  xfce3rc.sr.in  xfce3rc.uk.in  xfce3rc.zh_CN.GB2312.in  xfce3rc.zh_TW.Big5.in  xfclockrc  xfmouserc  xfsoundrc.in  xfwmrc.in  xinitrc.in  xinitrc.mwm.in  xsession  xtree.reg
palettes/: Alpine  Altxfce  Altxfce2  Altxfce3  Aluminium  Analog  Anthracite  Bahamas  Basic  BeHappy  BeHappy2  BeHappy3  BeHappy4  Blue  BlueX  BlueX2  BlueX3  BlueX4  Bronze  Bronze2  Cadmium  CandyBox  CandyBox2  Cheese  Chrome  Citrouille  Classic  Classic2  Clinky  Craters  DarkMetal  Default  DefaultTextured  Defcon  Desert  Dolly  Dust  Eaz-l  Fall  GTK+Default  (+91 more)
scripts/: CDE2Xfcepal  Makefile.am  Makefile.in  startxfce.in  xfce_remove  xfce_setup.in  xfce_upgrade.in  xfhelp.1  xfhelp.in  xflock  xflock.1  xfmountdev  xfmountdev.1  xfprint  xfprint.1  xfterm  xfterm.1  xftrash  xftrash.1
textures/: Aluminium.xpm  BWGrad.xpm  BlueX.xpm  BlueX2.xpm  Bronze2.xpm  Chrome.xpm  DarkMetal.xpm  DefaultGrad.xpm  Glass.xpm  GoldenBoy.xpm  Kdetheme.xpm  Liquid.xpm  Makefile.am  Makefile.in  Modern.xpm  Moz9.xpm  Power.xpm  Power2.xpm  Smooth.xpm  SmoothBW.xpm  Ultrafina.xpm  Xfcemetal.xpm  bronze.xpm  cheese.xpm  craters.xpm  ground.xpm  hitech.xpm  metal.xpm  military.xpm  oldwood.xpm  paper.xpm  silver.xpm  stripe.xpm
xfbd/: Makefile.am  Makefile.in  MyChangesToxfbd  xfbd.c  xfbd.h  xfbd_cb.c  xfbd_cb.h  xfbd_icon.xpm  xfbdmgr.c  xfbdmgr.h  xfbdmgr_cb.c  xfbdmgr_cb.h
xfce/: Makefile.am  Makefile.in  action.c  action.h  action_cb.c  action_cb.h  addiconpix.h  closepix.h  configfile.c  configfile.h  configtree.c  configtree.h  diagicon.h  diagnostic.c  diagnostic.h  edit.h  file1.h  file2.h  games.h  handle.h  iconify.h  info.c  info.h  mail.h  man.h  menu_icon.h  minbutdn.h  minbutup.h  minilock.h  mininf.h  minipnt.h  minpower.h  modify.c  modify.h  modify_cb.c  modify_cb.h  move.c  move.h  multimedia.h  network.h  (+36 more)
xfclock/: Makefile.am  Makefile.in  appointments.c  appointments.h  xfclock.1  xfclock.c  xfclock.h  xfclock_cb.c  xfclock_cb.h  xfclock_colorsel.c  xfclock_colorsel.h  xfclock_config.c  xfclock_config.h  xfclock_icon.xpm  xfclock_menus.c  xfclock_menus.h  xfclock_opt.c  xfclock_opt.h  xfclock_style.c  xfclock_style.h
xfdiff/: Changelog  Makefile.am  Makefile.in  TODO  globber.c  globber.h  xfdiff.c  xfdiff.h  xfdiff_colorsel.c  xfdiff_colorsel.h  xfdiff_diag.c  xfdiff_diag.h  xfdiff_gui.c  xfdiff_misc.c  xfdiff_misc.h
xfglob/: ChangeLog  Makefile.am  Makefile.in  glob.1  glob.c  globber.c  globber.h  xfglob.1  xfglob.c
xfgnome/: Makefile.am  Makefile.in  xfgnome.1  xfgnome.c  xfgnome.h
xfmenu/: Makefile.am  Makefile.in  xfmenu.c
xfmouse/: Makefile.am  Makefile.in  xfmouse.c  xfmouse.h  xfmouse_cb.c  xfmouse_cb.h  xfmouse_icon.xpm
xfpager/: Makefile.am  Makefile.in  XfwmPager.c  XfwmPager.h  x_pager.c  xfpager.1  xfpager.man
xfsamba/: ChangeLog  Makefile.am  Makefile.in  README  TODO  gtk_dlg.c  gtk_dlg.h  io.c  io.h  tubo.c  tubo.h  uri.c  uri.h  xfsamba.c  xfsamba.h  xfsamba_dnd.c  xfsamba_dnd.h  xfsamba_download.c  xfsamba_gui.c  xfsamba_icons.c  xfsamba_list.c  xfsamba_masterlookup.c  xfsamba_masterresolve.c  xfsamba_mem.c  xfsamba_mkdir.c  xfsamba_mnt.c  xfsamba_nmblookup.c  xfsamba_rm.c  xfsamba_smblookup.c  xfsamba_tar.c  xfsamba_upload.c
xfsound/: Makefile.am  Makefile.in  xfdsp.c  xfdsp.h  xfplay  xfsound.1  xfsound.c  xfsound.h  xfsound_cb.c  xfsound_cb.h  xfsound_icon.xpm
xftree/: Makefile.am  Makefile.in  README  TODO  dlg_icons.h  entry.c  entry.h  ft_types.h  gtk_dlg.c  gtk_dlg.h  gtk_dnd.h  gtk_exec.c  gtk_exec.h  gtk_get.c  gtk_get.h  gtk_prop.c  gtk_prop.h  i18n.h  icons.h  io.c  io.h  reg.c  reg.h  toolbar_icons.h  top.c  top.h  tubo.c  tubo.h  uri.c  uri.h  xftree.1  xtree.c  xtree_cb.c  xtree_cb.h  xtree_cfg.h  xtree_colorsel.c  xtree_cpy.c  xtree_cpy.h  xtree_dnd.c  xtree_dnd.h  (+22 more)
xfumed/: COPYING  Makefile.am  Makefile.in  xfumed.1  xfumed.c  xfumed.h  xfumed_gui.c  xfumed_gui.h  xfumed_gui_cb.c  (+1 more)
xfwm/: misc.c  (+48 more)
(+259 files in other folders)
