
EXTRA_DIST = $(backdrops_DATA) \
 Toulouse.list.in \
 Blue.list.in
CLEANFILES = \
 Toulouse.list \
 Blue.list

backdropsdir = $(XFCE_DIR)/backdrops
backdrops_DATA = \
 A-Little-Exercise.jpg \
 A-Little-Exercise-3.jpg \
 Anneaux.xpm \
 Arena.xpm \
 Aurora.xpm \
 BlackStripes.xpm \
 Blue.list \
 BlueStucco.xpm \
 Bluedrops.xpm \
 BlueSatin.xpm \
 BlueSea.xpm \
 BlueStripes.xpm \
 Bluefalls.xpm \
 Boucles.xpm \
 Brownie.xpm \
 Candies.xpm \
 Cds.xpm \
 Circle.xpm \
 Cloth.xpm \
 Clouds.xpm \
 Cocoa.xpm \
 Compute.xpm \
 Concrete.xpm \
 Darkblue2.xpm \
 Default.xpm \
 Desert2.xpm \
 Dry.xpm \
 Eyes.xpm \
 Fire.xpm \
 Flames.xpm \
 Flow.xpm \
 Flower.jpg \
 Funkyblue.xpm \
 Gallets.xpm \
 Glasses.xpm \
 Gold.xpm \
 Gradient.xpm \
 Green.xpm \
 GreenStucco.xpm \
 GreenStripes.xpm \
 Greenslate.xpm \
 Grey.xpm \
 GreyArena.xpm \
 Greydrops.xpm \
 Greysea.xpm \
 Hardblue.xpm \
 Honey.xpm \
 Horizon.png \
 Leaves.xpm \
 Linea.xpm \
 Marbled.xpm \
 Master-Plan.jpg \
 Maze.xpm \
 Metal-blue.jpg \
 Notes.xpm \
 Nebula.xpm \
 Overdriven.jpg \
 Pencils.xpm \
 Plasma.xpm \
 Pled.xpm \
 Pool.xpm \
 Psy.xpm \
 Psy2.xpm \
 Psy3.xpm \
 Purple.xpm \
 PurpleStripes.xpm \
 Reader.xpm \
 Rotin.xpm \
 Rough.xpm \
 Sandy-ridges.xpm \
 Satin.xpm \
 Satin2.xpm \
 Satin3.xpm \
 Sea.xpm \
 Sky.xpm \
 Sky2.xpm \
 Sky3.jpg \
 Slate.xpm \
 Soft.xpm \
 Softblue.xpm \
 Softblue2.xpm \
 Sol.xpm \
 Solid.xpm \
 Space.xpm \
 Space2.xpm \
 Storm.xpm \
 Sunny.xpm \
 Teal.xpm \
 The-Good-Times.jpg \
 TheLake.jpg \
 Tiles.xpm \
 Tiles2.xpm \
 Tiles3.xpm \
 Time.xpm \
 Time-For-Expansion.jpg \
 Toulouse.list \
 Toulouse-1.jpg \
 Toulouse-2.jpg \
 Toulouse-3.jpg \
 Toulouse-4.jpg \
 Ufo.xpm \
 Wall1.xpm \
 Wall2.xpm \
 Wall3.xpm \
 WaterPurple.xpm \
 Wax.xpm \
 Weave-red.xpm \
 Weird.xpm \
 Whirl.xpm \
 WhiteStripes.xpm \
 WipeBlue.png \
 Wood-floor.xpm \
 Wood.xpm \
 Wood2.xpm \
 Worm.xpm \
 Xfce.jpg \
 Xfce.xpm \
 XfceStellar.xpm \
 Xfcelogo.xpm \
 Xfcemice.jpg
