EXTRA_DIST = $(fonts_DATA)
fontsdir=$(XFCE_DIR)/fonts
fonts_DATA=\
 uniread-variable-05-b-i-ISO8859-1.pcf.gz \
 uniread-variable-05-b-i.pcf.gz \
 uniread-variable-05-b-r-ISO8859-1.pcf.gz \
 uniread-variable-05-b-r.pcf.gz \
 uniread-variable-05-m-i-ISO8859-1.pcf.gz \
 uniread-variable-05-m-i.pcf.gz \
 uniread-variable-05-m-r-ISO8859-1.pcf.gz \
 uniread-variable-05-m-r.pcf.gz \
 uniread-variable-07-b-i-ISO8859-1.pcf.gz \
 uniread-variable-07-b-i.pcf.gz \
 uniread-variable-07-b-r-ISO8859-1.pcf.gz \
 uniread-variable-07-b-r.pcf.gz \
 uniread-variable-07-m-i-ISO8859-1.pcf.gz \
 uniread-variable-07-m-i.pcf.gz \
 uniread-variable-07-m-r-ISO8859-1.pcf.gz \
 uniread-variable-07-m-r.pcf.gz \
 uniread-variable-09-b-i-ISO8859-1.pcf.gz \
 uniread-variable-09-b-i.pcf.gz \
 uniread-variable-09-b-r-ISO8859-1.pcf.gz \
 uniread-variable-09-b-r.pcf.gz \
 uniread-variable-09-m-i-ISO8859-1.pcf.gz \
 uniread-variable-09-m-i.pcf.gz \
 uniread-variable-09-m-r-ISO8859-1.pcf.gz \
 uniread-variable-09-m-r.pcf.gz \
 uniread-variable-10-b-i-ISO8859-1.pcf.gz \
 uniread-variable-10-b-i.pcf.gz \
 uniread-variable-10-b-r-ISO8859-1.pcf.gz \
 uniread-variable-10-b-r.pcf.gz \
 uniread-variable-10-m-i-ISO8859-1.pcf.gz \
 uniread-variable-10-m-i.pcf.gz \
 uniread-variable-10-m-r-ISO8859-1.pcf.gz \
 uniread-variable-10-m-r.pcf.gz \
 uniread-variable-12-b-i-ISO8859-1.pcf.gz \
 uniread-variable-12-b-i.pcf.gz \
 uniread-variable-12-b-r-ISO8859-1.pcf.gz \
 uniread-variable-12-b-r.pcf.gz \
 uniread-variable-12-m-r-ISO8859-1.pcf.gz \
 uniread-variable-12-m-r.pcf.gz \
 uniread-variable-14-b-r-ISO8859-1.pcf.gz \
 uniread-variable-14-b-r.pcf.gz \
 uniread-variable-14-m-r-ISO8859-1.pcf.gz \
 uniread-variable-14-m-r.pcf.gz \
 uniread-variable-18-m-r-ISO8859-1.pcf.gz \
 uniread-variable-18-m-r.pcf.gz \
 fonts.dir
