EXTRA_DIST = $(icons_DATA)
iconsdir=$(XFCE_DIR)/icons
icons_DATA=\
 3dpaint.xpm \
 ABC.xpm \
 AZ.xpm \
 AceKingCards.xpm \
 AntiVirus.xpm \
 ArtFolderEmpty.xpm \
 ArtFolderFull.xpm \
 BWDialogEdit.xpm \
 BWwidgets.xpm \
 BallotBox.xpm \
 Book.xpm \
 BulletHole.xpm \
 CDPlayer.xpm \
 CPUChip.xpm \
 Calculator.xpm \
 CheckMarkMonitor.xpm \
 ChiselChartSlide.xpm \
 Clock.xpm \
 ClosedPackageBox.xpm \
 ColoredCompactDisc.xpm \
 Connect.xpm \
 CrashCartoon.xpm \
 CylinderWrenchSpreadsheet.xpm \
 DeskGlobe.xpm \
 Director.xpm \
 Disk-Blue.xpm \
 DiskFloppy.xpm \
 DiskHammer.xpm \
 DiskHardDrive.xpm \
 DiskOptical.xpm \
 DisketteBoxEmpty.xpm \
 DisketteBoxFull.xpm \
 Document.xpm \
 Edit.xpm \
 Equation.xpm \
 EscherCube.xpm \
 EscherTriangle.xpm \
 FaxRecieved.xpm \
 FileAPP.xpm \
 FileManager.xpm \
 FilmNegative.xpm \
 Folder.xpm \
 FolderDeposit.xpm \
 FolderOpen.xpm \
 Folders.xpm \
 ForwardBackwardPagesBook.xpm \
 FreeBSD.xpm \
 GIMP.xpm \
 Game.xpm \
 Gimp2.xpm \
 Gnome-apps.xpm \
 Gnome-logo.xpm \
 Gnome-panel.xpm \
 GoldenSatelliteDish.xpm \
 HandOpen.xpm \
 HandPointing.xpm \
 HandPointingLeft.xpm \
 HandPointingLeft2.xpm \
 HandPunch.xpm \
 HandReach.xpm \
 Info.xpm \
 Interface.xpm \
 Keys.xpm \
 KeysOnChain.xpm \
 LeatherEmptyBag.xpm \
 LeatherFullBag.xpm \
 Lightbulb.xpm \
 MaelstromInFrame.xpm \
 MagnifyGlas.xpm \
 Mail.xpm \
 MailboxGoldGradientBackground.xpm \
 MicroPhonePro.xpm \
 Monalisa.xpm \
 Mosaic.xpm \
 Mouse.xpm \
 Netscape3.xpm \
 NetscapeLogo.xpm \
 News.xpm \
 OldBlueAddingMachine.xpm \
 Pen.xpm \
 Pencils.xpm \
 Penguin.xpm \
 PhonePortable.xpm \
 PhoneTTOffhook.xpm \
 Postit.xpm \
 PrefsDock.xpm \
 Printer.xpm \
 RayTracedGear.xpm \
 RecycleLogo.xpm \
 Stoplight.xpm \
 Tablet.xpm \
 Terminal.xpm \
 TextEditor.xpm \
 TrueDie.xpm \
 View.xpm \
 Viewer.xpm \
 WordProcessing.xpm \
 xfsamba.xpm \
 XV.xpm \
 X_server.xpm \
 Xmix.xpm \
 Xterm.xpm \
 Xv.xpm \
 playball.xpm \
 xfskin.xpm
 
