
# warning: - the "*.in" are not listed explicitly. 
EXTRA_DIST = $(conffiles_DATA) $(sysfiles_DATA) *.in
 
CLEANFILES = \
 COPYING \
 xfbdrc \
 xfce3rc \
 xfce3rc.bg \
 xfce3rc.cs \
 xfce3rc.de \
 xfce3rc.fr \
 xfce3rc.hu \
 xfce3rc.ja \
 xfce3rc.ko \
 xfce3rc.nl \
 xfce3rc.sr \
 xfce3rc.uk \
 xfce3rc.zh_CN.GB2312 \
 xfce3rc.zh_TW.Big5 \
 xfsoundrc \
 xfwmrc \
 xinitrc.mwm \
 xinitrc

conffilesdir=@XFCE_CONFDIR@
conffiles_DATA=\
 Xclients \
 fvwm2rc \
 fvwmrc \
 xfbdrc \
 xfce3rc \
 xfce3rc.cs \
 xfce3rc.de \
 xfce3rc.fr \
 xfce3rc.hu \
 xfce3rc.ja \
 xfce3rc.ko \
 xfce3rc.nl \
 xfce3rc.sr \
 xfce3rc.uk \
 xfce3rc.zh_CN.GB2312 \
 xfce3rc.zh_TW.Big5 \
 xfclockrc \
 xfmouserc \
 xfsoundrc \
 xfwmrc \
 xinitrc.mwm \
 xinitrc \
 xsession \
 xtree.reg \
 taskbarrc

sysfilesdir=@XFCE_DIR@
sysfiles_DATA=\
 COPYING \
 XFce3.logo
