## Process this file with automake to produce Makefile.in

EXTRA_DIST = $(man_MANS) $(bin_SCRIPTS) $(xfce_SOURC)

CLEANFILES = xfce_setup    xfce_upgrade    xfhelp    startxfce
xfce_SOURC = xfce_setup.in xfce_upgrade.in xfhelp.in startxfce.in
bin_SCRIPTS  = \
 xfhelp xfprint xftrash xfterm xflock xfce_setup \
 xfce_remove startxfce xfmountdev CDE2Xfcepal xfce_upgrade

man_MANS = xfhelp.1 xfprint.1 xftrash.1 xfterm.1 xflock.1 xfmountdev.1
