EXTRA_DIST=$(textures_DATA)
texturesdir=$(XFCE_DIR)/textures
textures_DATA=\
 Aluminium.xpm \
 BlueX.xpm \
 BlueX2.xpm \
 Bronze2.xpm \
 BWGrad.xpm \
 Chrome.xpm \
 DarkMetal.xpm \
 DefaultGrad.xpm \
 Glass.xpm \
 GoldenBoy.xpm \
 Kdetheme.xpm \
 Liquid.xpm \
 Modern.xpm \
 Moz9.xpm \
 Power.xpm \
 Power2.xpm \
 Smooth.xpm \
 SmoothBW.xpm \
 Ultrafina.xpm \
 Xfcemetal.xpm \
 bronze.xpm \
 cheese.xpm \
 craters.xpm \
 hitech.xpm \
 ground.xpm \
 metal.xpm \
 military.xpm \
 oldwood.xpm \
 paper.xpm \
 silver.xpm \
 stripe.xpm
